<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="iosco.app.activity.ForgetActivity"
    style="@style/activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/text_size_1"
        android:text="@string/text_forget_password"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textSize="@dimen/text_size_1"
        android:id="@+id/editText2"
        android:hint="@string/e_mail"
        android:background="@drawable/background_login"
        android:layout_below="@+id/textView2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/text_size_1"
        android:text="@string/sign_in"
        android:background="@drawable/background_signin"
        android:textColor="#fff"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:onClick="closeActivity"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/imageView2"
        android:src="@drawable/forget_close"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
