<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iosco.app.activity.LoginActivity"
    style="@style/activity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:scaleType="fitEnd"
            android:layout_height="0dp"
            android:layout_weight="0.55" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <Button
            android:onClick="forgotPassword"
            android:background="@drawable/background_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:id="@+id/textView"
            android:textColor="#0C87CE"
            android:textSize="14sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:onClick="login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/text_size_1"
            android:text="@string/sign_in"
            android:background="@drawable/background_signin"
            android:textColor="#fff"
            android:id="@+id/btnLogin"
            android:layout_above="@+id/textView"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:hint="@string/insert_your_code"
            android:textSize="@dimen/text_size_1"
            android:ems="10"
            android:id="@+id/txtPass"
            android:background="@drawable/background_login_edittext"
            android:layout_above="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:text="123ABCa$" />

        <EditText
            android:text="enrique.tito@live.com"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/text_size_1"
            android:id="@+id/txtEmail"
            android:hint="@string/e_mail"
            android:background="@drawable/background_login_edittext"
            android:layout_above="@+id/txtPass"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
